2013-09-10  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* base/openvas_hosts.c (openvas_hosts_free): Free hosts list in
	two steps instead of using g_list_free_full.

2013-09-11  Hani Benhabiles <hani.benhabiles@greenbone.net>

	A couple of changes based on suggestions by Henri Doreau, more to
	follow.

	* base/openvas_hosts.h: name the HOST_TYPE_* enum as host_type.
	(openvas_host): Change type's type to host_type.
	(openvas_hosts): Make removed variable unsigned.

	* base/openvas_hosts.c (openvas_hosts_remove_duplicates): Declare
	elements variable at top of the block.

2013-09-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/resolve.c (host2ip): Removed. It is an unused function.

2013-09-06  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Fix a couple of memory leaks.

	* misc/pcap.c (v6_getinterfaces): Call freeifaddrs if getifaddrs call
	succeeds.

	* misc/plugutils.c (plug_set_replace_key): Free str when soc is null
	too.

	* nasl/nasl_host.c (get_host_ip): Use the already duplicated txt_ip
	instead of duplicating it again.

2013-09-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/test-hosts.c: New. A stand-alone test tool for module
	openvas_hosts. Developed by Hani Benhabiles.

	* base/CMakeLists.txt: Add handling for test-hosts.c.

2013-09-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* doc/Doxyfile.in: Removed handling of module hg.

2013-09-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* hg/: Removed.

2013-09-05  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Remove unused hg/ module.

	* hg/hg_filter.h, hg/hg_subnet.c,
	hg/hg_utils.c, hg/test.c,
	hg/hosts_gatherer.c, hg/hg_dns_axfr.c,
	hg/hg_subnet.h, hg/hg_utils.h,
	hg/hg_add_hosts.c, hg/hosts_gatherer.h,
	hg/hg_dns_axfr.h, hg/README.txt,
	hg/hg_add_hosts.h, hg/CMakeLists.txt,
	hg/hg_filter.c, hg/hg_debug.c: Removed.

	* COPYING: Remove hg license information.

	* nasl/CMakeLists, CMakeLists, libopenvas.pc.in: Remove hg directory and