@@ -5,6 +5,15 @@
 
 2013-09-11  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
+	* base/openvas_hosts.c (openvas_hosts_exclude): New function.
+	(openvas_hosts_count, openvas_hosts_removed, openvas_hosts_free)
+	(openvas_hosts_shuffle, openvas_host_equal): Coding style fix.
+
+	* base/openvas_hosts.h: Add openvas_hosts_exclude prototype.
+	(openvas_hosts_t): Update comment.
+
+2013-09-11  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
 	A couple of changes based on suggestions by Henri Doreau, more to
 	follow.
 
